2010-04-23  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: {StaticResource} expressions are
	  not allowed end in whitespace according to the moon-units.
	  Fixes a regression in the tests.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: Correctly handle setting bindings on
	  attached properties through xaml.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* ManagedXamlLoader.cs: If an attached property is referenced
	  in xaml with a clr namespace prefix, the DP lookup will fail
	  when we use full_type_name as we end up looking up:
	  "Some.Namespace.SomeClass.Canvas" and "Left" instead of
	  "Canvas" and "Left". If our DP lookup fails the first time,
	  do a second lookup with "Canvas" and "Left" to see if that
	  works. It's possible that multiple places can be affected by
	  this.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* MoonlightTypeConverter.cs: If we can't find the correct
	  property when looking for typeconverters then just ignore it
	  instead of throwing an exception. Fixes part of DRT 997.

2010-04-15  Alan McGovern  <amcgovern@novell.com>

	* Value.cs: ManagedTypeInfo needs to contain the Type::Kind
	  for the type. This allows us figure out if one
	  ManagedPropertyInfo is subclass/superclass of another which
	  was not possible before.

2010-04-14  Alan McGovern  <amcgovern@novell.com>

	* MoonlightTypeConverter.cs: Correctly parse gridlengths like
	  "5.3*" in our type converter.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: Add in proper null checks
	  for for ReadLocalValue and ClearValue

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: We need to trim both double
	  quotes and single quotes from the string. Fixes part of drt
	  349.

2010-04-08  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Add support for some new SL4