@@ -1,3 +1,8 @@
+2010-05-03  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Helper.cs: Add CheckAccess helper for class that inherit
+	from System.Object (e.g. MessageBox)
+
 2010-04-23  Alan McGovern  <amcgovern@novell.com>
 
 	* MarkupExpressionParser.cs: {StaticResource} expressions are
